brand.html finished

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<!-- 공통헤더시작 -->
 <div class="logo">
 	<a href="#" title="메인화면"><!--링크에 대한 툴팁, 보충설명 -->
 	<img src="images/logo.png" alt="펩시골라">
@@ -27,6 +28,7 @@
 			
 		</ul>
 	</div>
+	<!-- 공통헤더 끝 -->
 
 <div class="promotion">
 	<img src="images/visual.png" alt="펩시콜라 3가지맛 출시">
@@ -54,12 +56,14 @@
 	<div class="contact">
 		<h2>PEPSI CS CENTER</h2>
 		<P>1566-3082</P>
+		
+	<!-- 공통 푸터 -->	
 		<hr>
 		<p>광주광역시 서구 쌍촌동 한울직업전문학교</p>
 		<p>COPYRIGHT(C) 2017.PEPSI ALL RIGHTS RESERVED.<P>
 	</div>
 	
-
+<!-- 공통푸터 끝 -->
 	
 	
 	
